# FreedomHawk

./: .gitattributes  .gitignore  CLAUDE.md  Firehawk.bat  LICENSE  README.md  ROADMAP.md  Sequin.bat  pyproject.toml
Samples/: README.md
docs/: capture-guide.md  drum-kits.md  feature-coverage.md  protocol.md  user-manual.html  user-manual.md
src/firehawk/: __init__.py  __main__.py  config.py  sequin.py
src/firehawk/data/: README.md
src/firehawk/device/: __init__.py  session.py
src/firehawk/model/: __init__.py  catalog.py  library.py  preset.py  symbols.py  valuetypes.py
src/firehawk/practice/: __init__.py  drums.py  metronome.py  midifile.py  patternstore.py
src/firehawk/presets/: 01_pristine_clean.json  02_chime_shimmer.json  03_blues_breakup.json  04_classic_crunch.json  05_plexi_roar.json  06_modern_metal.json  07_lead_machine.json  08_ambient_wash.json  09_funk_rhythm.json
src/firehawk/protocol/: __init__.py  addressing.py  crc.py  frame.py  message.py  tonematch.py  transport_header.py
src/firehawk/transport/: __init__.py  base.py  serialport.py  simulator.py
src/firehawk/tuner/: __init__.py  tones.py  tunings.py
src/firehawk/ui/: __init__.py  accessibility.py  app.py  blockpanel.py  controls.py  drumspanel.py  mainframe.py  metronomepanel.py  presetspanel.py  theme.py  tunerpanel.py
tests/: test_build_manual.py  test_catalog.py  test_config.py  test_device.py  test_drums.py  test_library.py  test_metronome.py  test_midifile.py  test_patternstore.py  test_pitch.py  test_preset.py  test_protocol.py  test_songgrid.py  test_symbols.py  test_transport.py  test_tuner.py  test_ui_smoke.py
tools/: crc_hunt.py  disasm.py  extract_assets.py  make_starter_presets.py  native_protocol_symbols.txt
